--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-react": "^1.2.0",
+    "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "react-thunk": "^1.0.0",
     "redux": "^4.2.0",
